--- a/gionee/result.html
+++ b/gionee/result.html
@@ -16,7 +16,7 @@
             return null;
         }
 
-        window[getQueryString('callback')](getQueryString('err'));
+        window.parent[getQueryString('callback')](getQueryString('err'));
     </script>
 
 </body>
