--- a/some/submit.html
+++ b/some/submit.html
@@ -6,13 +6,13 @@
 </head>
 <body>
     <script type="text/javascript">
-        function abc (type, name, password) {
+        function abc (type) {
             switch (type) {
                 case '1':
-                    alert('登录成功:'+name+'---'+password);
+                    alert('登录成功');
                 break;
                 default:
-                    alert('登录失败:'+name+'---'+password);
+                    alert('登录失败');
             }
         }
     </script>
