--- a/some/qrcode/q2.html
+++ b/some/qrcode/q2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>不同尺寸的微信二维码在70px和80px下的展示</title>
+    <title>不同尺寸的微信二维码在75px和80px下的展示</title>
     <style type="text/css">
         #img span {
             display: inline-block;
@@ -70,14 +70,14 @@
         </tbody>
     </table>
     <h2 class="red">低于80*80扫描就会稍微费力，建议不要低于这个值</h2>
-    <h2>以下分别是微信五种二维码尺寸在70*70和80*80的实际大小下</h2>
+    <h2>以下分别是微信五种二维码尺寸在75*75和80*80的实际大小下</h2>
     <div id="img">
 
     </div>
     <script type="text/javascript">
         var arr = ['8-258', '12-344', '15-430', '30-860', '50-1280'];
 
-        var size = [70, 80];
+        var size = [75, 76, 77, 78, 79, 80];
 
 
         var r = [];
