--- a/some/qrcode/q2.html
+++ b/some/qrcode/q2.html
@@ -77,7 +77,7 @@
     <script type="text/javascript">
         var arr = ['8-258', '12-344', '15-430', '30-860', '50-1280'];
 
-        var size = [75, 76, 77, 78, 79, 80];
+        var size = [70, 71, 72, 73, 74,75, 76, 77, 78, 79, 80];
 
 
         var r = [];
