--- a/some/demo.html
+++ b/some/demo.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="box"></div>
-        <div class="out" style="height: 300px;">
+        <div class="out">
             <div id="reader"></div>
         </div>
 <script src="http://static.bcedocument.com/reader/v2/doc_reader_v2.js"></script>
