--- a/some/demo.html
+++ b/some/demo.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
         <title>demo</title>
+        <meta data-react-helmet="true" name="apple-itunes-app" content="app-id=432274380, app-argument=zhihu://questions/20873070">
         <style type="text/css">
             html,body {
                 padding: 0;
@@ -16,7 +17,12 @@
         </style>
     </head>
     <body>
-        <div class="box"></div>
+        <div class="box">
+            <a href="kkplayer.zip">kk</a>
+            <a href="baidu://message?appid=bV0HpKqEjgUEuo7VH4w7pg">hi</a>
+            <a href="javascript:window.location.href='weixin://'">weixin</a>
+            <a href="https://tanbi.baidu.com/_iosuniversallink/wenku/operation?type=108&doc_id=df386aab710abb68a98271fe910ef12d2af9a9c3">wk</a>
+        </div>
         <div class="out">
             <div id="reader"></div>
         </div>
