--- a/some/test.html
+++ b/some/test.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>无标题文档</title>
 <style>
+body {
+    page-break-after: always;
+}
 </style>
 </head>
 <body>
